--- a/arch/arm64/configs/sun50iw1p1smp_linux_defconfig
+++ b/arch/arm64/configs/sun50iw1p1smp_linux_defconfig
@@ -2279,6 +2279,9 @@ CONFIG_VIDEO_ENCODER_DECODER_SUNXI=m
 #
 CONFIG_DRM=y
 # CONFIG_DRM_UDL is not set
+CONFIG_DRM_SUNXI=m
+# CONFIG_DRM_SUNXI_ROTATER is not set
+CONFIG_DRM_SUNXI_HDMI=m
 # CONFIG_VGASTATE is not set
 # CONFIG_VIDEO_OUTPUT_CONTROL is not set
 CONFIG_HDMI=y
